# torchinfluence

./: pyproject.toml  readme.md  requirements.txt
notebooks/: MNIST_GradSim.ipynb  MNIST_TracIn.ipynb  RoBERTa.ipynb  communities.ipynb
tests/: test_gradientsim.py  test_tracin.py
torchinfluence/methods/: ArnoldiIF.py  TracIn.py  __init__.py  gradient_similarity.py
